# SynaesthetiQ-audiocapture

./: .gitignore  .gitmodules  AudioCapture.cpp  AudioCapture.h  FFTProcessor.cpp  Makefile  PingPongBuffer.cpp  PingPongBuffer.h  README.md  audio.raw  convert.sh  fft_output.txt  ffttest  ffttest.cpp  main.cpp  soundweave  test  test.cpp
backup/: sdl  sdlcallback.cpp
callback/: AudioCapture.cpp  AudioCapture.h  Makefile  audio.raw  audioselector.h  main  main.cpp  select.cpp  test  test.cpp
src/: CMakeLists.txt  FFTProcessor.cpp  FFTProcessor.h  SynaesthetiQ-AudioCapture  lowresfft_test.cpp  main.cpp  matrix_data.txt  output.avi
src/AudioCapture/: AudioCapture.cpp  AudioCapture.h  PingPongBuffer.cpp  PingPongBuffer.h
src/GenreClassification/: GenreClassifier.cpp  GenreClassifier.h
tests/: CMakeLists.txt  TestPingPongBuffer.cpp
